Added new module NewGame, fixed restarting game and showing player clicks on computer board

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -116,11 +116,13 @@ body {
 .hit,
 .hit:hover {
   background-color: rgb(255, 120, 120);
+  pointer-events: none;
 }
 
 .miss,
 .miss:hover {
   background-color: rgb(140, 255, 140);
+  pointer-events: none;
 }
 
 .modalContainer {
